<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARPAV Meteo</string>
    <string name="update">Aggiorna</string>
    <string name="config">Preferiti</string>
    <string name="home">Pagina principale</string>
    <string name="add">Aggiungi località</string>
    <string name="pref">Preferiti</string>
    <string name="bull">Bollettini</string>
    <string name="meteo">Meteo</string>
    <string name="radar">Radar</string>
    <string name="mv">Veneto</string>
    <string name="dm">Dolomiti</string>
    <string name="pm">Pianura</string>
    <string name="choice">Scelta provincia e comune</string>
    <string name="warning">Nessun preferito selezionato</string>
    <string name="advice">Usa il pulsante Preferiti per aggiungere località alla lista preferiti. In seguito potrai gestire i tuoi preferiti da Menù &gt; Preferiti</string>
    <string name="denom">Agenzia Regionale per la Prevenzione e Protezione Ambientale del Veneto"</string>
    <string name="description_image_home">Arpav Immage</string>
    <string name="not_connected_toast">Connect to network to update image!</string>
    <string name="no_network">Connessione non disponibile</string>
    <string name="loading">Attendi il caricamento..</string>
    <string name="img_not_available">Immagine non disponibile, aggiorna i dati o connettiti</string>
    <string name="max_municipalities_notice">Il limite di località memorizzabile è stato raggiunto</string>
    <string name="municipality_added_successfully">Località aggiunta con successo!</string>
    <string name="municipality_deleted_successfully">Località eliminata con successo!</string>

</resources>