<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E4E4E4"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/logo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="50"
            android:gravity="fill_vertical"
            android:textColor="#000"
            android:textSize="10dip" >
        </TextView>

        <ImageView
            android:id="@+id/denom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:background="@drawable/banner_app" >
        </ImageView>
    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bg_gradient_top_bar" >

        <TextView
            android:id="@+id/municipality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            
            android:gravity="center"
            android:text="@string/warning"
            android:textColor="#FFF"
            android:textSize="19dp"
            android:typeface="sans" />
    </RelativeLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/advice"
            android:layout_width="300dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/advice"
            android:textColor="#413839"
            android:textSize="14dp" />

        <Button
            android:id="@+id/button_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/config"
            android:drawableLeft="@drawable/ic_menu_star" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#C0C0C0"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/meteograms"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/meteo"
            android:textColor="#000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/bulletins"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/bull"
            android:textColor="#000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/radar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/radar"
            android:textColor="#000"
            android:textSize="14dp" />
    </LinearLayout>

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:padding="10dip" />

</LinearLayout>