<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 Jake Wharton

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on "/home/io/Workspace_android18"an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/logo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="50"
            android:gravity="fill_vertical"
            android:textColor="#000"
            android:textSize="10dip" >
        </TextView>

        <ImageView
            android:id="@+id/denom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:background="@drawable/banner_app" >
        </ImageView>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#C0C0C0"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/meteograms"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/meteo"
            android:textColor="#000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/bulletins"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/bull"
            android:textColor="#000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/radar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/radar"
            android:textColor="#000"
            android:textSize="14dp" />
    </LinearLayout>

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:padding="10dip" />

</LinearLayout>